# agentstracer

./: .gitignore  LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml
.github/workflows/: publish.yml
agentstrace/: backends.py  badges.py  cli.py  config.py  convert_to_training_data.py  daemon.py  index.py  parser.py  pii.py  scoring.py  secrets.py
agentstracer/: __init__.py  backends.py  cli.py  config.py  convert_to_training_data.py  daemon.py  index.py  parser.py  pii.py  scoring.py
clawtrace/: __init__.py  anonymizer.py  backends.py  card.py  cli.py  config.py  convert_to_training_data.py  daemon.py  index.py  parser.py  pii.py  scoring.py
docs/superpowers/plans/: 2026-07-06-kimi-code-trace-parser.md
docs/superpowers/specs/: 2026-07-06-kimi-code-trace-parser-design.md
tests/: test_anonymizer.py  test_backends.py  test_badges.py  test_card.py  test_cli.py  test_config.py  test_daemon.py  test_depth.py  test_index.py  test_parser.py  test_pii.py  test_scoring.py  test_secrets.py  test_segmenter.py
