[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawtrace"
version = "1.0.0"
description = "Review, score, and curate your coding agent conversation traces locally"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    {name = "kaiaiagent"},
]
keywords = ["claude-code", "codex", "gemini-cli", "opencode", "openclaw", "dataset", "conversations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.scripts]
clawtrace = "clawtrace.cli:main"

[tool.setuptools.packages.find]
include = ["clawtrace*"]

[tool.setuptools.package-data]
"clawtrace" = ["web/frontend/dist/**/*"]

[project.optional-dependencies]
dev = ["pytest"]
