[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentstracer"
version = "1.0.2"
description = "Review, score, and curate your coding agent conversation traces locally"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    {name = "kaiaiagent"},
]
keywords = ["claude-code", "codex", "gemini-cli", "opencode", "openclaw", "dataset", "conversations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.scripts]
agentstracer = "agentstracer.cli:main"

[tool.setuptools.packages.find]
include = ["agentstracer*"]

[tool.setuptools.package-data]
"agentstracer" = ["web/frontend/dist/**/*"]

[project.urls]
Homepage = "https://github.com/cyijun/agentstracer"
Repository = "https://github.com/cyijun/agentstracer"

[project.optional-dependencies]
dev = ["pytest"]
